Fix: Resolve autoloader path mismatch between host and Docker environments
This fixes the critical 'Cannot read config from HealthCheck\Application\Config\ConfigProvider' error that occurred when creating hexagonal architecture projects.

Root Cause:
- Empty namespace prefix caused path mismatches
- Installer only updated root composer.json, not backend/composer.json
- Docker autoloader had incorrect backend/src/ paths instead of src/

Changes:
- Use explicit namespace mappings instead of empty prefix
- Added updateBackendComposerJson() method to update both composer.json files
- Improved Docker start.sh to regenerate autoloader with correct paths
- Fixed JSON format to ensure autoload-dev.psr-4 is object not array

Affected files:
- composer.json: Explicit App and SkeletonInstaller namespaces
- backend/composer.json: (tracked via backend/src/SkeletonInstaller)
- OptionalPackages.php: New updateBackendComposerJson() method
- docker/backend/start.sh: Enhanced autoloader regeneration

Closes #autoloader-path-mismatch

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,12 @@
 .DS_Store
 Thumbs.db
 
+# Root-level dependencies and artifacts (composer at root)
+/vendor/
+/composer.lock
+/.phpcs-cache
+/.phpunit.cache/
+
 # Dependencies
 /backend/vendor/
 /frontend/node_modules/
