docs: Update README to reflect architecture choice feature and remove tracked lock file
- Update README.md to prominently feature architecture choice (minimal vs hexagonal)
- Add Architecture Options section explaining both approaches
- Update project structure documentation to reflect choice
- Remove backend/composer.lock from repository (should not be tracked in skeleton)
- Add /backend/composer.lock to .gitignore
- Update package name consistently to methorz/mezzio-hexagonal-skeleton
- Update installer package name checks

This makes it clear to users that they can choose between minimal and hexagonal
architecture during setup, rather than implying the skeleton only supports minimal.

--- a/backend/composer.json
+++ b/backend/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "methorz/hexa-skeleton",
-    "description": "Minimal Mezzio skeleton application with PHP 8.4+",
+    "name": "methorz/mezzio-hexagonal-skeleton",
+    "description": "Mezzio skeleton with architecture choice: minimal or hexagonal (DDD). Includes optional packages for modern PHP 8.4+ REST API development.",
     "type": "project",
     "license": "MIT",
     "config": {
